--- a/vehicle-stream-connect/Dockerfile
+++ b/vehicle-stream-connect/Dockerfile
@@ -1,3 +1,4 @@
 FROM confluentinc/cp-kafka-connect:7.5.0
 
 RUN confluent-hub install --no-prompt confluentinc/kafka-connect-s3-source:2.6.16
+RUN confluent-hub install --no-prompt confluentinc/kafka-connect-jdbc:10.8.4
